--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,17 @@
 
-<router-outlet></router-outlet>
+<div class="main-container">
+    <!-- Sidebar or Menu -->
+    <div class="sidebar">
+<app-acceuil></app-acceuil>
+    </div>
+
+    <!-- Main Content -->
+    <div class="content">
+      <router-outlet></router-outlet>
+
+    </div>
+  </div>
+
+  <!-- Footer -->
+
+<app-footer></app-footer>
