--- a/src/app/edit-user/edit-user.component.css
+++ b/src/app/edit-user/edit-user.component.css
@@ -7,23 +7,13 @@
   font-size: 1rem;
   line-height: 2.15;
   padding-left: .75em;
-  padding-right: 1.2em;
-
+  padding-right: .75em;
 }
 .card-registration .select-arrow {
   top: 13px;
 }
 
-.gradient-custom-2 {
-  /* fallback for old browsers */
-  background: #a1c4fd;
 
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(to right, rgba(161, 196, 253, 1), rgba(194, 233, 251, 1));
-
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(to right, rgba(161, 196, 253, 1), rgba(194, 233, 251, 1))
-}
 
 .bg-indigo {
   background-color: #4835d4;
@@ -39,4 +29,9 @@
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
   }
+}
+section{
+  transition: margin 0.3s ease; /* Smooth animation */
+  margin-top: 0;
+  margin-right: 10px;
 }
