--- a/src/app/edit-user/edit-user.component.html
+++ b/src/app/edit-user/edit-user.component.html
@@ -8,14 +8,14 @@
               *ngIf="!isSuccessful"
               name="userForm"
               class="form"
-              (ngSubmit)="onSubmit()"
+              (ngSubmit)="onSave()"
               #f="ngForm"
               novalidate
             >
-            <div class="row g-0">
+              <div class="row g-0">
 
-              <div class="col-lg-6">
-                <div class="p-5">
+                <div class="col-lg-6">
+                  <div class="p-5">
 
                     <h3 class="fw-normal mb-5" style="color: #4835d4;">Informations d’identification de l&#39;entreprise</h3>
 
@@ -56,34 +56,34 @@
                       </div>
                     </div>
 
-                  <div class="mb-4 pb-2">
-                    <div >
-                      <label class="form-check-label" id="form3Examplev44"><b>Types de marché :</b></label>
-                      <div>
-                        <input type="radio" id="fournitures" name="typedemarche" value="Fournitures" [(ngModel)]="user.typedemarche" />
-                        <label class="form-check-label" for="fournitures">Fournitures</label>
-                      </div>
-                      <div>
-                        <input type="radio" id="servicesCourants" name="typedemarche" value="Services courants" [(ngModel)]="user.typedemarche" />
-                        <label class="form-check-label" for="servicesCourants">Services courants</label>
-                      </div>
-                      <div>
-                        <input type="radio" id="travaux" name="typedemarche" value="Travaux" [(ngModel)]="user.typedemarche" />
-                        <label class="form-check-label" for="travaux">Travaux</label>
-                      </div>
-                      <div>
-                        <input type="radio" id="prestationsIntellectuelles" name="typedemarche" value="Prestations intellectuelles" [(ngModel)]="user.typedemarche" />
-                        <label class="form-check-label" for="prestationsIntellectuelles">Prestations intellectuelles</label>
-                      </div>
-                      <div>
-                        <input type="radio" id="autres" name="typedemarche" value="Autres" [(ngModel)]="user.typedemarche" />
-                        <label class="form-check-label" for="autres">Autres</label>
+                    <div class="mb-4 pb-2">
+                      <div >
+                        <label class="form-check-label" id="form3Examplev44"><b>Types de marché :</b></label>
+                        <div>
+                          <input type="radio" id="fournitures" name="typedemarche" value="Fournitures" [(ngModel)]="user.typedemarche" />
+                          <label class="form-check-label" for="fournitures">Fournitures</label>
+                        </div>
+                        <div>
+                          <input type="radio" id="servicesCourants" name="typedemarche" value="Services courants" [(ngModel)]="user.typedemarche" />
+                          <label class="form-check-label" for="servicesCourants">Services courants</label>
+                        </div>
+                        <div>
+                          <input type="radio" id="travaux" name="typedemarche" value="Travaux" [(ngModel)]="user.typedemarche" />
+                          <label class="form-check-label" for="travaux">Travaux</label>
+                        </div>
+                        <div>
+                          <input type="radio" id="prestationsIntellectuelles" name="typedemarche" value="Prestations intellectuelles" [(ngModel)]="user.typedemarche" />
+                          <label class="form-check-label" for="prestationsIntellectuelles">Prestations intellectuelles</label>
+                        </div>
+                        <div>
+                          <input type="radio" id="autres" name="typedemarche" value="Autres" [(ngModel)]="user.typedemarche" />
+                          <label class="form-check-label" for="autres">Autres</label>
+                        </div>
                       </div>
                     </div>
-                  </div>
 
 
-                  <div class="row">
+                    <div class="row">
                       <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
                         <div class="form-outline">
                           <input type="tel" id="form3Examplev5" class="form-control form-control-lg" placeholder="N ° de téléphone" [(ngModel)]="user.numtel" name="numtel"/>
@@ -103,11 +103,11 @@
                       </div>
                     </div>
 
+                  </div>
                 </div>
-              </div>
 
-              <div class="col-lg-6 bg-indigo text-white">
-                <div class="p-5">
+                <div class="col-lg-6 bg-indigo text-white">
+                  <div class="p-5">
 
                     <h3 class="fw-normal mb-5">Détails du propriétaire ou représentant légal</h3>
 
@@ -205,7 +205,7 @@
                     <div class="form-group">
                       <button type="submit" class="btn btn-dark btn-lg btn-block" >Sign Up</button>
                     </div>
-<br>
+                    <br>
                     <h5 class="h7" routerLink="/login">Vous avez déjà un compte ?</h5>
 
                     <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
@@ -215,9 +215,9 @@
 
 
 
+                  </div>
                 </div>
-              </div>
-            </div></form>
+              </div></form>
             <div class="alert alert-success" *ngIf="isSuccessful">
               Your registration is successful!
             </div>
