--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <br>
 <br>
-<div class="container">
+<div class="container py-5 h-100">
   <div class="row justify-content-center">
     <div class="col-md-8">
       <div class="card-group mb-0">
@@ -23,7 +23,7 @@
               </div>
               <div class="row">
                 <div class="col-6">
-                  <button type="submit" class="btn btn-primary px-4" [disabled]="!loginForm.form.valid">Login</button>
+                  <button type="submit" class="btn btn-primary px-4" [disabled]="!loginForm.form.valid" >Login</button>
                 </div>
 
                 <div class="col-6 text-right">
