--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <br>
 <br>
-<div class="container py-5 h-100">
+<div class="container py-5 h-100" style="height: 100vh; width: 100vw;">
   <div class="row justify-content-center">
     <div class="col-md-8">
       <div class="card-group mb-0">
@@ -49,3 +49,4 @@
       </div>
     </div>
   </div>
+
