--- a/src/app/modules/admin/acceuil/acceuil.component.html
+++ b/src/app/modules/admin/acceuil/acceuil.component.html
@@ -8,52 +8,40 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <!-- BootStrap JS -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/mdb-ui-kit@5.2.2/css/mdb.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/mdb-ui-kit@5.2.2/js/mdb.min.js"></script>
+
 </head>
 <nav class="navbar navbar-light bg-light">
-  <div class="container-fluid justify-content-between " mdbCollapse>
+  <div class="container-fluid justify-content-between " >
+    <div  class="d-flex align-items-center">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+      Welcome {{user1}}
+    </a>
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+      <li><a class="dropdown-item" [href]="'admin/update/'+ user.id" On>Profile</a></li>
+      <li><a class="dropdown-item" href="#">Another action</a></li>
+      <li><hr class="dropdown-divider"></li>
+      <li><a class="dropdown-item" href="#">Setting</a></li>
+    </ul>
 
-
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      </div>
+    <form class="d-flex">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
     <div  class="d-flex align-items-center">
 
-      <button type="button" class="btn btn-light px-3 me-2" routerLink="/login" (click)="onLoginClick()"><i class="fas fa-user-circle" ></i>
+      <button type="button" class="btn btn-light px-3 me-2" routerLink="/login" ><i class="fas fa-user-circle" ></i>
         Login
       </button>
       <button type="button" class="btn btn-light px-3 me-2"  routerLink="/register">
         Sign Up
       </button>
-      <a
-        class="nav-link dropdown-toggle hidden-arrow d-flex align-items-center"
-
-        id="navbarDropdownMenuLink"
-        role="button"
-        data-mdb-toggle="dropdown"
-        aria-expanded="false"
-        [mat-menu-trigger-for]="about">
-        <img
-          src="https://mdbootstrap.com/img/Photos/Avatars/img (31).jpg"
-          class="rounded-circle"
-          height="22"
-          alt=""
-          loading="lazy"
-        />
-      </a>
-      <mat-menu #about="matMenu" class="dropdown-menu" >
-        <button mat-menu-item >My profile</button>
-        <button mat-menu-item >Settings</button>
-        <button mat-menu-item >Logout</button>
-      </mat-menu>
-
 
     </div>
+
 
 
 
@@ -63,14 +51,13 @@
 
 
 <!-- Sidebar -->
-  <nav
-    id="sidebarMenu"
-    class="collapse "
-  >
+<nav *ngIf="roles.includes('ROLE_ADMIN')" id="sidebarMenu" class="collapse">
+  <!-- Your navigation content for ROLE_ADMIN -->
+
     <div class="position-sticky">
       <div class="list-group list-group-flush mx-3 mt-4">
         <a
-          href="#"
+          href="/admin/dashboard"
           class="list-group-item list-group-item-action py-2 ripple"
           aria-current="true"
         >
@@ -78,14 +65,14 @@
           ><span>Main dashboard</span>
         </a>
         <a
-          href="/user"
+          href="/admin/dashboard"
           class="list-group-item list-group-item-action py-2 ripple active"
         >
           <i class="fa fa-home fa-fw me-3"></i
           ><span>Acceuil</span>
         </a>
         <a
-          href="#"
+          href="/admin/appel"
           class="list-group-item list-group-item-action py-2 ripple"
         ><i class="fas fa-phone-volume fa-fw me-3"></i><span>Appels d'offres</span></a
         >
@@ -110,7 +97,7 @@
         ><span>Calendar</span></a
         >
         <a
-          href="#"
+          href="/admin/user"
           class="list-group-item list-group-item-action py-2 ripple"
         ><i class="fas fa-users fa-fw me-3"></i><span>Users</span></a
         >
