--- a/src/app/modules/admin/get-user/get-user.component.html
+++ b/src/app/modules/admin/get-user/get-user.component.html
@@ -1,5 +1,5 @@
 
-<div class="container" style="margin-top: 100px;">
+<div class="container" style="margin-top: 100px; margin-bottom: 100px" >
   <div *ngIf="errorMessage" class="text-bg-danger">{{errorMessage}}</div>
   <div class="card" *ngIf="Users" >
     <div class="card-header">Users List</div>
